junior developer about me story added

--- a/index.html
+++ b/index.html
@@ -3,5 +3,14 @@
 <head>
     <title>Nicola Giannotta</title>
 </head>
-<body></body>
+<body>
+    <h1>Nicola Giannotta</h1>
+    <h2>Junior Developer</h2>
+    <br>
+    <hr>
+    <h3>About me</h3>
+    <p>I am a civil engineer who has been working for the lsta 6 years in Uk building several iconic building such as Manchester Airport terminal 2 extension, The factory in Spinningfield and the Scalpel skyscraper in London. during mi experience in construction I have come accross digital engineering and I started developing an interest to digital and data in general.</p>
+<p>I have started coding using udemy accademy with a full stack developer course and then deepened my knowledge with a fast track bootcamp course in Manchester Code Accademy</p>    
+    
+    <body>
 </html>
