--- a/index.html
+++ b/index.html
@@ -4,17 +4,39 @@
     <title>Nicola Giannotta</title>
 </head>
 <body>
+<main>
+
     <header>
-    <h1>Nicola Giannotta</h1>
-    <h2>Junior Developer</h2>
-</header>
+        <h1>Nicola Giannotta</h1>
+    
+        <h2>Junior Developer</h2>
+    </header>
     <br>
     <hr>
-    <main>
     <h3>About me</h3>
-    <p>I am a civil engineer who has been working for the lsta 6 years in Uk building several iconic building such as Manchester Airport terminal 2 extension, The factory in Spinningfield and the Scalpel skyscraper in London. during mi experience in construction I have come accross digital engineering and I started developing an interest to digital and data in general.</p>
+    <p>I am a civil engineer who has been working for the last 6 years in Uk building several iconic buildings such as Manchester Airport terminal 2 extension, The factory in Spinningfield and the Scalpel skyscraper in London.During my experience in construction I have come accross digital engineering and I started developing an interest to digital and data in general.</p>
     <p>I have started coding using udemy accademy with a full stack developer course and then deepened my knowledge with a fast track bootcamp course in Manchester Code Accademy</p>    
-    </main>
- <footer> May 2022 <nbrs></nbrs><nbrs></nbrs><nbrs></nbrs><nbrs></nbrs><nbrs></nbrs><nbrs></nbrs><nbrs></nbrs>Nicola Giannotta</footer>   
-  <body>
+    <aside>
+        <ol>
+            <li>Qualities
+                <ul>
+                    <li>analytical</li>
+                    <li>creative</li>
+                    <li>confident</li>
+                    <li>time management</li>
+                </ul>
+            </li>
+            <li>Hobbies and interest
+                <ul>
+                    <li>Boxing</li>
+                    <li>Cooking</li>
+                    <li>Travel</li>
+                    <li>coding</li>
+                </ul>
+             </li>
+        </ol>
+    </aside> 
+ <footer> May 2022 <nbrs></nbrs><nbrs></nbrs><nbrs></nbrs><nbrs></nbrs><nbrs></nbrs><nbrs></nbrs><nbrs></nbrs>Nicola Giannotta</footer> 
+</main>  
+</body>   
 </html>
