added contact and projects links

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <title>Nicola Giannotta</title>
 </head>
 <body>
-<main>
-
+<main>  
     <header>
         <h1>Nicola Giannotta</h1>
-    
         <h2>Junior Developer</h2>
+        <nav>
+            <a href="pages/contact.html" target="blank">Contact me</a>
+            <a href="pages/projects.html"target="blank">Projects</a>
+        </nav>
     </header>
     <br>
     <hr>
