html 5 added with nav and ficaptures and photos

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nicola Giannotta</title>
 </head>
 <body>
@@ -8,6 +11,7 @@
     <header>
         <h1>Nicola Giannotta</h1>
         <h2>Junior Developer</h2>
+        <img src="images/nicola.png" alt="my personal image" height="300" width="240">
         <nav>
             <a href="pages/contact.html" target="blank">Contact me</a>
             <a href="pages/projects.html"target="blank">Projects</a>
@@ -16,16 +20,28 @@
     <br>
     <hr>
     <h3>About me</h3>
-    <p>I am a civil engineer who has been working for the last 6 years in Uk building several iconic buildings such as Manchester Airport terminal 2 extension, The factory in Spinningfield and the Scalpel skyscraper in London.During my experience in construction I have come accross digital engineering and I started developing an interest to digital and data in general.</p>
+    <p>I am a civil engineer who has been working for the last 6 years in Uk building several iconic buildings such as Manchester Airport terminal 2 extension, The factory in Spinningfield and the Scalpel skyscraper in London.During my experience in construction I have come accross digital engineering and I started developing an interest to digital and data in general.
+    Before becoming a Civil engineer I have worked in hospitality for almost 15 years basically covering almost every aspect of it, from front of house in catering to lifeguarding and personal training in beach resorts in Italy. I also worked as an eintertainer in a resort.
+    </p>
     <p>I have started coding using udemy accademy with a full stack developer course and then deepened my knowledge with a fast track bootcamp course in Manchester Code Accademy</p>    
+    <figure>
+        <img src="images/laing1.JPG" alt="image of me at the factory project" height="900" width="600">
+        <br/>
+        <figcaption>Me during the construction of the Factory,the new iconic Art Centre in Spinnifingfiel</figcaption>
+    </figure>
+    <figure>
+        <img src="images/personal.jpg" alt="me during personal training sessions">
+        <br/>
+        <figcaption>Me during a session of pool gym at resorts in Italy</figcaption>
+    </figure>
     <aside>
         <ol>
             <li>Qualities
                 <ul>
-                    <li>analytical</li>
-                    <li>creative</li>
-                    <li>confident</li>
-                    <li>time management</li>
+                    <li>Analytical</li>
+                    <li>Creative</li>
+                    <li>Confident</li>
+                    <li>Time management</li>
                 </ul>
             </li>
             <li>Hobbies and interest
@@ -33,7 +49,7 @@
                     <li>Boxing</li>
                     <li>Cooking</li>
                     <li>Travel</li>
-                    <li>coding</li>
+                    <li>Coding</li>
                 </ul>
              </li>
         </ol>
