tables chapter added in project.html

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,6 +7,48 @@
     <title>Projects</title>
 </head>
 <body>
+    <section>
+        <h1>Table of contents</h1>
+        <h2>Projects list</h2>
+        <table>
+            <thead>
+                <tr>
+                    <td>Name</td>
+                    <td>Image</td>
+                    <td>Description</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Hello world</td>
+                    <td><img src="" alt="familiarise with headings"></td>
+                    <td>familiarise with headings</td>
+                </tr>
+                <tr>
+                    <td>Links</td>
+                    <td><img src="" alt="how to make links"></td>
+                    <td>how to make links</td>
+                </tr>
+                <tr>
+                    <td>Tables</td>
+                    <td><img src="" alt="how to structure a table"></td>
+                    <td>How to structure a table</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="3" width="100%"> That's all falks</td>
+                </tr>
+            </tfoot>
+        </table>
+
+
+
+
+
+
+
+    </section>
     
 </body>
 </html>
