contact.html amended with users info request

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,6 +7,50 @@
     <title>Contacts</title>
 </head>
 <body>
+    <header>
+        <nav>
+         <h1 title="NG Developments specialise in house refurbishment and building restorations">NG DEVELOPMENTS</h1>
+        </nav>
+    </header>
+    <main>
+
+<form action="" method="post"></form>
+<fieldset>
+<legend>Tell us what you need</legend>
+<select name="Our Services" id="">
+    <option value="House Refurbishment">House refurbishment</option>
+    <option value="Building maintenance">Building Maintenace</option>
+    <option value="Design"> Building or House Design</option>
+    <option value="Consultant">Consultancy</option>
+</select>
+<br>
+<h3>Your Details</h3>
+<div>
+<label for="full-name">Full Name</label>
+    <input type="text" name="full-name" id="full-name">
+</div>
+<div>
+<label for="email">Your email</label>
+    <input type="email" name="email" placeholder="your personal email" id="email">
+</div>
+<div>
+    <label for="fulladdress">Full line of address</label>
+    <input type="number" placeholder="House Number">
+    <input type="text" id="fulladdress" placeholder="Your Address">
+    <input type="text" id="fulladdress" placeholder="Your Postcode">
+</div>
+<div>
+    <textarea name="" id="" cols="30" rows="10" placeholder="tell us about your dream"></textarea>
+</div>
+<div>
+    <input type="submit" name="submit" value="SEND">
+</div>
+</fieldset>
+
+
+
+    </main>
+    <footer></footer>
     
 </body>
 </html>
