users input request addedd

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,7 +17,7 @@
 <form action="" method="post"></form>
 <fieldset>
 <legend>Tell us what you need</legend>
-<select name="Our Services" id="">
+<select name="Our Services Includes" id="">
     <option value="House Refurbishment">House refurbishment</option>
     <option value="Building maintenance">Building Maintenace</option>
     <option value="Design"> Building or House Design</option>
